file is modified and about and blog page is added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="flex">
                 <img src="./Images/logo.png" alt="iBlog-Heavens" class="logo">
                 <ul class="flex">
-                    <li> <a href="index.html">Home</a> </li>
+                    <li> <a href="index.html" class="active">Home</a> </li>
                     <li> <a href="about.html">About</a> </li>
                     <li> <a href="contact.html">Contacts</a> </li>
                 </ul>
@@ -46,7 +46,7 @@
                 <h2 style="padding-left:10px">Featured Articles</h2>
                 <section>
                     <article class="flex-blog">
-                        <img src="./Images/1.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/1.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -54,7 +54,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/2.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/2.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -62,7 +62,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/3.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/3.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -70,7 +70,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/4.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/4.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -78,7 +78,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/5.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/5.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -86,7 +86,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/6.svg" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/4.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -94,7 +94,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/7.png" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/7.png" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -102,7 +102,7 @@
                         </div>
                     </article>
                     <article class="flex-blog">
-                        <img src="./Images/8.svg" alt="Illustartor" class="blog-img">
+                        <a href="blog.html"> <img src="./Images/8.svg" alt="Illustrator" class="blog-img"></a>
                         <div>
                             <h3>Lorem ipsum dolor sit amet.</h3>
                             <p>Author</p>
@@ -111,7 +111,7 @@
                     </article>
                 </section>
             </div>
-            <div>
+            <div class="year">
                 <h4>Year</h4>
                 <input type="radio" name="years" id="twenty">2020
                 <input type="radio" name="years" id="twenty-one">2021
